@@ -1,5 +1,8 @@
 *SVN*
 
+* Added support for upload progress indicators in Apache and lighttpd 1.4.x (won't work in WEBrick or lighttpd 1.3.x) #1475 [Sean Treadway]
+  See http://sean.treadway.info/files/howto-upload-progress-2.mov for example.
+
 * Added support for graceful error handling of Ajax calls #1217 [Jamis Buck/Thomas Fuchs]. Example:
 
     link_to_remote(
